// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders default <Bar /> 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <BottomBar /> 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.c1 {
  margin: auto 0 0 0;
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`renders default <Content /> 1`] = `
<DocumentFragment>
  @media screen and (min-width:40rem) {
  .c0 {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    margin: 0 1.5rem;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <Main /> 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-flow: column;
  align-content: center;
  align-items: center;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
  text-align: center;
}

<main
    class="c0"
  />
</DocumentFragment>
`;
